--- a/Practicas/Practica 1/index.html
+++ b/Practicas/Practica 1/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png">
         <title>camilacastillo</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="../../Styles.css">
